application/hashicups/nginx.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
    tags.datadoghq.com/service: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      service: nginx
      app: nginx
  template:
    metadata:
      labels:
        service: nginx
        app: nginx
      annotations:
        admission.datadoghq.com/enabled: "true"
        ad.datadoghq.com/envoy-sidecar.tags: '{"service": "envoy-proxy"}'
        ad.datadoghq.com/envoy-sidecar.checks: |
          {
            "envoy": {
              "instances": [{"openmetrics_endpoint": "http://%%host%%:20200/metrics"}]
            }
          }
        consul.hashicorp.com/connect-inject: "true"
        consul.hashicorp.com/connect-service-upstreams: "frontend:3000, public:8080"
        consul.hashicorp.com/transparent-proxy-exclude-outbound-ports: "8125,8126"
    spec:
      serviceAccountName: nginx
      containers:
        - name: nginx
          image: nginx:stable-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
            items:
              - key: nginx.conf
                path: nginx.conf
