application/hashicups/payments.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: payments
spec:
  selector:
    app: payments
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments
  labels:
    app: payments
    tags.datadoghq.com/service: payments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
        tags.datadoghq.com/service: payments
      annotations:
        admission.datadoghq.com/enabled: "true"
        ad.datadoghq.com/envoy-sidecar.tags: '{"service": "envoy-proxy"}'
        ad.datadoghq.com/envoy-sidecar.checks: |
          {
            "envoy": {
              "instances": [{"openmetrics_endpoint": "http://%%host%%:20200/metrics"}]
            }
          }
        consul.hashicorp.com/connect-inject: "true"
        consul.hashicorp.com/transparent-proxy-exclude-outbound-ports: "8125,8126"
    spec:
      serviceAccountName: payments
      containers:
        - name: payments
          image: hashicorpdemoapp/payments:v0.0.16
          ports:
            - containerPort: 8080
