application/hashicups/public-api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: public
  labels:
    app: public
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: public
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public
  labels:
    app: public
    tags.datadoghq.com/service: public
spec:
  replicas: 1
  selector:
    matchLabels:
      app: public
  template:
    metadata:
      labels:
        app: public
        tags.datadoghq.com/service: public
      annotations:
        admission.datadoghq.com/enabled: "true"
        ad.datadoghq.com/envoy-sidecar.tags: '{"service": "envoy-proxy"}'
        ad.datadoghq.com/envoy-sidecar.checks: |
          {
            "envoy": {
              "instances": [{"openmetrics_endpoint": "http://%%host%%:20200/metrics"}]
            }
          }
        consul.hashicorp.com/connect-inject: "true"
        consul.hashicorp.com/connect-service-upstreams: "product:9090,payments:1800"
        consul.hashicorp.com/transparent-proxy-exclude-outbound-ports: "8125,8126"
    spec:
      serviceAccountName: public
      containers:
        - name: public
          image: hashicorpdemoapp/public-api:v0.0.6
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
